# -skeletal-animation-implementation

./: README.md
skeletal_animation/: 3d_math.h  CMakeLists.txt  app.cpp  appdefs.h  grayman.blend1  main.cpp  readme.txt
skeletal_animation/collada/: collada.cpp  collada.h
skeletal_animation/objects/: grayman.cpp
skeletal_animation/window/: d3d_manager.cpp  d3d_manager.h  d3d_window.cpp
src/: readme.txt
src/collada_loader/: collada.cpp  collada.h  collada_loader.sln  collada_loader.vcxproj  colladaapp.cpp
src/skeletal_animation/: 3d_math.h  app.cpp  app.h  appdefs.h  grayman._mesh  grayman.blend  main.cpp  skeletal_animation.sln  skeletal_animation.vcxproj
src/skeletal_animation/objects/: grayman.cpp  grayman.h
src/skeletal_animation/window/: d3d_manager.cpp  d3d_window.cpp  d3d_window.h
